# cmake-cpp-template

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
apps/: CMakeLists.txt
apps/myapp/: CMakeLists.txt
apps/myapp/src/: main.cpp
cmake/modules/: CompilerDefinitions.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  DefaultSettings.cmake  Dependencies.cmake  DetectPlatform.cmake  InstallSetup.cmake  InterfaceTargets.cmake  ProjectOptions.cmake  StandardSettings.cmake  TestingSetup.cmake  VcpkgSetup.cmake
cmake/presets/: base.json  compilers.json  features.json  options.json  toolchains.json  tools.json
cmake/templates/: lib_export.hpp.in  mylib-config.cmake.in
libs/: CMakeLists.txt
libs/mylib/: CMakeLists.txt
libs/mylib/lib/: CMakeLists.txt
libs/mylib/lib/src/mylib/: Add.cpp  Add.hpp  mylib.cpp  mylib.hpp
libs/mylib/lib/templates/: Version.hpp.in
libs/mylib/src/: CMakeLists.txt
libs/mylib/tests/: CMakeLists.txt
libs/mylib/tests/src/mylib/: AddTests.cpp  mylib_tests.cpp
libs/mylib_other/lib/: CMakeLists.txt
libs/mylib_other/lib/src/mylib/other/: AddTwice.cpp  AddTwice.hpp
libs/mylib_other/tests/: CMakeLists.txt
libs/mylib_other/tests/src/mylib/other/: AddTwiceTests.cpp
